--- a/css/messages.css
+++ b/css/messages.css
@@ -1,3 +1,14 @@
+:root {
+    --info-bg-color: #a6c2ff;
+    --info-text-color: darkblue;
+    --success-bg-color: #c9ffc9;
+    --success-text-color: darkgreen;
+    --warning-bg-color: #ffffb7;
+    --warning-text-color: #b58810;
+    --error-bg-color: lightpink;
+    --error-text-color: darkred;
+}
+
 body, html {
     height: 100%;
     width: 100%;
@@ -14,21 +25,21 @@ div {
 }
 
 .message-info {
-   background-color: #a6c2ff;
-    color: darkblue;
+   background-color: var(--info-bg-color);
+    color: var(--info-text-color);
 }
 
 .message-success {
-    background-color: #c9ffc9;
-    color: darkgreen;
+    background-color: var(--success-bg-color);
+    color: var(--success-text-color);
 }
 
 .message-warning {
-    background-color: #ffffb7;
-    color: #b58810;
+    background-color: var(--warning-bg-color);
+    color: var(--warning-text-color);
 }
 
 .message-error {
-    background-color: lightpink;
-    color: darkred;
+    background-color: var(--error-bg-color);
+    color: var(--error-text-color);
 }
