--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -40,7 +40,7 @@ h2, h3 {
 section {
     /* enter needed declarations here */
     display: flex;
-    margin: 10px 0;
+    margin: 15px 0;
 }
 
 section:nth-of-type(1) {
@@ -79,12 +79,13 @@ section:nth-of-type(1) div:last-child {
 
 section:nth-of-type(3) {
     /* enter needed declarations here */
-    margin: 10px 0;
+    justify-content: space-between;
 }
 
 section:nth-of-type(3) h3 {
     /* enter needed declarations here */
-
+    align-self: center;
+    flex-grow: 1;
 }
 
 .orange-circle {
@@ -100,6 +101,7 @@ section:nth-of-type(3) h3 {
     width: 5em;
     background: brown;
     /* enter needed declarations here */
+    flex-grow: 1;
 }
 
 .large-brown-box:nth-of-type(2) {
@@ -108,6 +110,7 @@ section:nth-of-type(3) h3 {
 
 section:nth-of-type(5) {
     /* enter needed declarations here */
+    justify-content: space-evenly;
 }
 
 .yellow-box {
@@ -120,6 +123,10 @@ section:nth-of-type(6) {
     background: coral;
     height: 14em;
     /* enter needed declarations here */
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    align-content: space-around;
 }
 
 .grey-box {
