--- a/css/twitter-flexbox.css
+++ b/css/twitter-flexbox.css
@@ -105,6 +105,9 @@ a {
     overflow: auto;
     display: flex;
 }
+h4 {
+    width: 100%;
+}
 .media-image {
     max-width: 50px;
     max-height: 50px;
