--- a/css/flexbox-nav-exercise.css
+++ b/css/flexbox-nav-exercise.css
@@ -2,3 +2,32 @@
     box-sizing: border-box;
 }
 
+body {
+    margin: 0;
+}
+
+nav {
+    background-color: #b5b5b5;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+}
+
+nav a {
+    text-decoration: none;
+    color: black;
+    display: inline-block;
+    padding: 1em;
+}
+
+nav a:hover {
+    color: #006598;
+}
+
+nav ul li:nth-child(5) {
+    margin-left: auto;
+}
