--- a/css/flexbox-nav-exercise.css
+++ b/css/flexbox-nav-exercise.css
@@ -22,6 +22,8 @@ nav a {
     color: black;
     display: inline-block;
     padding: 1em;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: bolder;
 }
 
 nav a:hover {
@@ -30,4 +32,14 @@ nav a:hover {
 
 nav ul li:nth-child(5) {
     margin-left: auto;
+}
+
+nav h2 {
+    position: absolute;
+    top: -.5em;
+    left: 50%;
+    padding: .2em 0;
+    font-size 3em;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bolder;
 }
