Added footer to nav exercise

--- a/css/flexbox-nav-exercise.css
+++ b/css/flexbox-nav-exercise.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+:root {
+    --accent-color: #006598;
+}
+
 body {
     margin: 0;
 }
@@ -27,7 +31,7 @@ nav a {
 }
 
 nav a:hover {
-    color: #006598;
+    color: var(--accent-color);
 }
 
 nav ul li:nth-child(5) {
@@ -42,4 +46,29 @@ nav h2 {
     font-size 3em;
     font-family: 'Montserrat', sans-serif;
     font-weight: bolder;
+}
+
+footer {
+    margin: 4em;
+    font-family: 'Work Sans', sans-serif;
+}
+
+footer a {
+    text-decoration: none;
+    color: black;
+    display: inline-block;
+    padding: .5em;
+}
+
+footer a:hover {
+    background: var(--accent-color);
+    color: white;
+}
+
+footer ul {
+    justify-content: flex-end;
+}
+
+footer h5 {
+    text-align: end;
 }
