--- a/css/flexbox-nav-exercise.css
+++ b/css/flexbox-nav-exercise.css
@@ -38,9 +38,9 @@ nav ul li:nth-child(5) {
     margin-left: auto;
 }
 
-nav h2 {
+nav h2 a {
     position: absolute;
-    top: -.5em;
+    top: 5px;
     left: 50%;
     padding: .2em 0;
     font-size 3em;
